--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "path": "^0.12.7"
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.0.1",
+    "mongoose": "^6.9.3",
+    "path": "^0.12.7",
+    "short-unique-id": "^4.4.4"
   }
 }
